Add GC flags
Authored-by: Jianxia Chen <jchen21@apache.org>